Fix source and target var

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'idea'
 apply plugin: "maven"
 apply plugin: 'application'
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 /* Application */
 mainClassName = "de.nihas101.chip8.Emulator"
 archivesBaseName = 'Chip8Emulator'
