--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@ apply plugin: 'idea'
 apply plugin: "maven"
 apply plugin: 'application'
 
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
 /* Application */
-mainClassName = "de.nihas101.chip8.Emulator"
+applicationName = "chip8"
+mainClassName = "de.nihas101.chip8.Main"
 archivesBaseName = 'Chip8Emulator'
-version = '1.0-SNAPSHOT'
+version = '1.1-SNAPSHOT'
 
 /* dependencies */
 repositories {
