--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,10 @@ dependencies {
 jar {
     baseName = "Chip8Emulator"
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
