--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,18 @@
 language: java
 jdk: oraclejdk8
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=fa130e273291a2afaa11e080a243fe5965f9535c6065b72f470c915d3e322e23
+
 before_install:
   - chmod +x gradlew
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
