--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,30 @@
 language: java
 jdk: oraclejdk8
 
+install: true
+
+sudo: false   # Linux OS: run in container
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 before_install:
   - chmod +x gradlew
+  - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
+before_script:
+  - if [[ "${TRAVIS_OS_NAME}" == osx ]]; then brew update; brew cask reinstall caskroom/versions/java8; fi
+
+script:
+  - ./gradlew check
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.bin
+  - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.lock
