--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // TestFX: github.com/TestFX/TestFX
+    testCompile "org.testfx:testfx-core:4.0.12-alpha"
+    testCompile "org.testfx:testfx-junit:4.0.12-alpha"
 }
 
 jar {
